--- a/public/styles/contact.css
+++ b/public/styles/contact.css
@@ -2,6 +2,7 @@
     margin-top: 60px;
     margin-bottom: 40px;
 }
+
 .container {
     display: flex;
     justify-content: space-evenly;
@@ -17,7 +18,6 @@
     background-color: #f9f9f9;
 }
 
-
 .contact-info h2 {
     margin-top: 0;
     color: #495ca8;
@@ -26,12 +26,15 @@
 h3 {
     color: #495ca8;
 }
+
 h4 {
     color: #495ca8;
 }
+
 .Informationen p {
-    color:black;
+    color: black;
 }
+
 .contact-info ul {
     list-style: none;
     padding: 0;
@@ -39,7 +42,7 @@ h4 {
 
 .contact-info ul li {
     margin-bottom: 10px;
-    color:black;
+    color: black;
 }
 
 .contact-info ul li strong {
@@ -62,8 +65,6 @@ h4 {
     padding: 20px;
 }
 
-
-
 .image img {
     max-width: 100%;
     height: auto;
@@ -75,8 +76,9 @@ h4 {
         flex-direction: column;
         align-items: center;
     }
-    .contact-info, .image {
+
+    .contact-info,
+    .image {
         flex: 1;
     }
 }
-    
