--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -84,7 +84,8 @@ body {
 }
 
 .toggle-btn {
-  display: none; /* Initially hide the toggle button */
+  display: none;
+  /* Initially hide the toggle button */
   z-index: 1000;
 }
 
